[gd_scene load_steps=9 format=3 uid="uid://boqm8v14wpdwy"]

[ext_resource type="Script" path="res://Scenes/Main Menu/main_menu.gd" id="1_50xh3"]
[ext_resource type="Texture2D" uid="uid://l285xkd655dv" path="res://Assets/THEGAME logo.png" id="2_1lfss"]
[ext_resource type="Texture2D" uid="uid://dgv5r2ccpb4vl" path="res://Assets/Gray.png" id="2_38u3q"]
[ext_resource type="AudioStream" uid="uid://c4nth67r6syqi" path="res://Assets/Sounds/Menu Ost.mp3" id="4_j2etk"]
[ext_resource type="AudioStream" uid="uid://d35wmsw6fuwh" path="res://Assets/Sounds/Button Pressed sfx.mp3" id="5_qkvwn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4kl38"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m2l2p"]
bg_color = Color(1.92523e-07, 0.507596, 0.348936, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qj26l"]
bg_color = Color(0, 0.922734, 0.646999, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="MainMenu" type="Node"]
script = ExtResource("1_50xh3")

[node name="MenuForBackground" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 1411.0
offset_bottom = 871.0
texture = ExtResource("2_38u3q")
stretch_mode = 1

[node name="Logo" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -245.0
offset_right = 289.0
offset_bottom = -137.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1lfss")

[node name="MenuSoundTrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_j2etk")
autoplay = true

[node name="ButtonPressedSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qkvwn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -261.0
offset_top = -65.0
offset_right = 261.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Level 1 button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_4kl38")
theme_override_styles/hover = SubResource("StyleBoxFlat_m2l2p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qj26l")
theme_override_styles/normal = SubResource("StyleBoxFlat_qj26l")
text = "Level 1"

[node name="Level 2 button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_4kl38")
theme_override_styles/hover = SubResource("StyleBoxFlat_m2l2p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qj26l")
theme_override_styles/normal = SubResource("StyleBoxFlat_qj26l")
text = "Level 2"

[node name="Level 3 button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_4kl38")
theme_override_styles/hover = SubResource("StyleBoxFlat_m2l2p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qj26l")
theme_override_styles/normal = SubResource("StyleBoxFlat_qj26l")
text = "Level 3"

[connection signal="pressed" from="VBoxContainer/Level 1 button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level 2 button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level 3 button" to="." method="_on_level_3_button_pressed"]
